--- a/bh_mass_spectrum.ipynb
+++ b/bh_mass_spectrum.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "with np.load('../mkr_1146_manga_data_cube.npz') as res:\n",
+    "with np.load('mkr_1146_manga_data_cube.npz') as res:\n",
     "    wavelength = res['wavelength']  # wavelength in angstroms (A)\n",
     "    cube = res['cube']  # flux in 1e-17 erg/s/cm^-2/A/spaxel\n",
     "    stellar_cont_model = res['stellar_cont_model']  # model flux in 1e-17 erg/s/cm^-2/A/spaxel"
@@ -106,7 +106,7 @@
     "import matplotlib.pylab as plt\n",
     "import os\n",
     "%matplotlib inline\n",
-    "plt.style.use('../mystyle.mplstyle')\n",
+    "plt.style.use('mystyle.mplstyle')\n",
     "\n",
     "\n",
     "### ADD CODE HERE ###"
