--- a/thejoker_stellar_mass_BH.ipynb
+++ b/thejoker_stellar_mass_BH.ipynb
@@ -61,7 +61,7 @@
     "from astropy.time import Time\n",
     "import os\n",
     "%matplotlib inline\n",
-    "plt.style.use('../mystyle.mplstyle')\n",
+    "plt.style.use('mystyle.mplstyle')\n",
     "\n",
     "# set up a random number generator to ensure reproducibility\n",
     "seed = 42\n",
